# StereoFaceDetector

./: README.md
detector_msgs/: CMakeLists.txt  package.xml
detector_msgs/srv/: DetectorService.srv
face_detection/: CMakeLists.txt  package.xml
face_detection/cfg/: another_config.yaml
face_detection/src/: DlibFaceDetector.cpp
image_view/: CMakeLists.txt
image_view/src/nodes/: stereo_view.cpp  test_view.cpp
real_face_detector/: CMakeLists.txt  package.xml
real_face_detector/launch/: real_face_detector_demo.launch  test_stereo.launch
ros_dlib/: CMakeLists.txt  package.xml
stereo_image_proc/: CMakeLists.txt
stereo_image_proc/cfg/: better_config.yaml  config.yaml  config_for_wall.yaml  more_better_config(maybe).yaml
stereo_image_proc/src/libstereo_image_proc/: processor.cpp
stereo_image_proc/src/nodelets/: point_cloud2.cpp
video_streamer/: CMakeLists.txt  package.xml
video_streamer/launch/: camera.launch  stereo_camera.launch
video_streamer/src/: video_stream.cpp
